--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <section id="hello" class="tab-content">
             <div class="max-w-3xl mx-auto text-center md:text-left py-6 sm:py-10">
                 <div class="flex flex-col items-center md:flex-row md:items-start">
-                    <img src="https://scontent.fdac24-4.fna.fbcdn.net/v/t39.30808-6/450198129_1105484033880968_5491298553626840298_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGo3qkTousw8FMXT4-7kTE9KAgUyojinqEoCBTKiOKeoXctAL3kZ7hTNibzVRknssQUs4BOG_Bhp001QiozJS1A&_nc_ohc=fjTtoNHTlTYQ7kNvwHRobG7&_nc_oc=AdkZ4iYh6c0riYi9donVehEhkncZGMjdK42ynoHFCr1sw7kmxOlCx9gzcGVSFnkmfjQ&_nc_zt=23&_nc_ht=scontent.fdac24-4.fna&_nc_gid=lnWK35JonKF_QGzNDCgn8w&oh=00_AfLbZmf_dwoYL93KiteAxSk3Gvk2poZU7lAfv2prS7v3kg&oe=683A513F" alt="Riyad - Profile Picture" class="profile-pic md:mr-8">
+                    <img src="https://avatars.githubusercontent.com/u/196608164?v=4" alt="Riyad - Profile Picture" class="profile-pic md:mr-8">
                     <div class="mt-4 md:mt-0">
                         <p class="text-lg sm:text-xl md:text-2xl text-gray-400 mb-1 sm:mb-2">Hi all. I am</p>
                         <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold text-gray-100 mb-2 sm:mb-3">Riyad</h1>
@@ -189,11 +189,11 @@
 
                 <div class="font-mono text-xs sm:text-sm md:text-base space-y-1 bg-[#0d1117] p-4 sm:p-6 rounded-lg border border-[#30363d] shadow-xl text-left">
                     <p class="code-line"><span class="comment">// my number</span></p>
-                    <p class="code-line"><span class="keyword">const</span> <span class="variable">telephoneNum</span> <span class="operator">=</span> <span class="string">"YOUR_PHONE_NUMBER"</span><span class="operator">;</span></p>
+                    <p class="code-line"><span class="keyword">const</span> <span class="variable">telephoneNum</span> <span class="operator">=</span> <span class="string">01875274709</span><span class="operator">;</span></p>
                     <p class="code-line"><span class="comment">// my e-mail</span></p>
-                    <p class="code-line"><span class="keyword">const</span> <span class="variable">email</span> <span class="operator">=</span> <span class="string">"your.email@example.com"</span><span class="operator">;</span></p>
+                    <p class="code-line"><span class="keyword">const</span> <span class="variable">email</span> <span class="operator">=</span> <span class="string">"shriyad.me@gmail.com"</span><span class="operator">;</span></p>
                     <p class="code-line"><span class="comment">// you can also see it on my Github page</span></p>
-                    <p class="code-line"><span class="keyword">const</span> <span class="variable">githubLink</span> <span class="operator">=</span> <span class="string">"https://github.com/yourusername"</span><span class="operator">;</span></p>
+                    <p class="code-line"><span class="keyword">const</span> <span class="variable">githubLink</span> <span class="operator">=</span> <span class="string">"https://github.com/shviper1"</span><span class="operator">;</span></p>
                     <p class="code-line"><span class="comment">// you can check my Linkedin Page</span></p>
                     <p class="code-line"><span class="keyword">const</span> <span class="variable">linkedinPage</span> <span class="operator">=</span> <span class="string">"https://www.linkedin.com/in/yourusername/"</span><span class="operator">;</span></p>
                 </div>
